force-app/main/default/objects/Order_Approved__e/Order_Approved__e.object-meta.xml
<CustomObject>
    <label>Order Approved</label>
    <pluralLabel>Order Approved Events</pluralLabel>
    <description>Platform Event published when an Order's credit is Approved. Decouples downstream integration (ERP order confirmation, logistics) — Phase 4 subscribers. See Phase 2 step 6 / C2 container.</description>
</CustomObject>