force-app/main/default/objects/Order_Approved__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Id of the Order's account (for routing to the right ERP customer).</description>
</CustomField>