force-app/main/default/objects/Order_Approved__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>Id of the approved Order.</description>
</CustomField>