force-app/main/default/objects/Order_Approved__e/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <type>Text</type>
    <length>30</length>
    <description>Human-readable order number for subscribers/logging.</description>
</CustomField>