force-app/main/default/objects/Order_Approved__e/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Order total at approval time.</description>
</CustomField>